<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/purple_700">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:layout_marginBottom="5dp">
        <Button
            android:id="@+id/btnHostels"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_gravity="center|center_vertical"
            android:background="@drawable/rounded_drawable"
            android:text="@string/hotels"
            android:textAlignment="center"
            android:fontFamily="@font/futuramediumbt"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:textColor="#fbf7e1"
            android:layout_weight="1"
        />
        <Button
            android:id="@+id/btnRooms"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_gravity="center|center_horizontal"
            android:background="@drawable/rounded_drawable"
            app:backgroundTint="#DDD8D0"
            android:text="@string/rooms"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/futuramediumbt"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/purple_500"
            android:layout_weight="1"
        />
        <Button
            android:id="@+id/btnHomes"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center|center_horizontal"
            android:background="@drawable/rounded_drawable"
            app:backgroundTint="#DDD8D0"
            android:textAllCaps="false"
            android:text="@string/Homes"
            android:fontFamily="@font/futuramediumbt"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/purple_500"
            android:layout_weight="1"
        />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>