<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.propertydetail.PropertyDetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewPrice"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="22dp"
        app:cardUseCompatPadding="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/purple_500">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/purple_500"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvPropertyLowestPriceCurrency"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/ash"
                android:fontFamily="@font/futuramediumbt"
                android:text="@string/euro"
                android:layout_weight="1.5"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:gravity="center_vertical|center_horizontal"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tvPropertyLowestPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:paddingLeft="2dp"
                android:paddingRight="20dp"
                android:textColor="@color/ash"
                android:fontFamily="@font/futuramediumbt"
                android:text=""
                android:textStyle="bold"
                android:layout_weight="0.9"
                android:textAlignment="textStart"
                android:gravity="center_vertical|center_horizontal"
                tools:ignore="RtlCompat"/>

        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textAlignment="center"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textSize="12sp"
                android:drawablePadding="-8dp"
                android:textColor="@color/ash"
                android:fontFamily="@font/futuralightbt"
                app:drawableStartCompat="@drawable/info_svgrepo_com"
                app:drawableTint="@color/white"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/cardViewPrice"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_marginBottom="10dp"/>
                <LinearLayout
                    android:id="@+id/SliderDots"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="18dp"/>
                <ImageView
                    android:id="@+id/imgBackArrow"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="48dp"
                    app:srcCompat="@drawable/ic_back_white"
                    android:layout_gravity="top|left"/>

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tvHostelName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_gravity="center_vertical"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/futuramediumbt"
                        android:textColor="@color/purple_500"
                        android:layout_weight="0.3"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="0.9"
                        android:id="@+id/layoutRatingReview">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:id="@+id/layoutRating">


                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:src="@drawable/star_rate_svgrepo_com"
                                    android:layout_gravity="center_vertical"
                                    android:layout_weight="0.9"
                                    android:paddingLeft="5dp"
                                    android:paddingRight="5dp"/>

                                <TextView
                                    android:id="@+id/tvPropertyDetailRating"
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:layout_weight="0.8"
                                    android:layout_gravity="center_horizontal"
                                    android:gravity="center_vertical"
                                    android:fontFamily="@font/futuramediumbt"
                                    android:text=""
                                    android:paddingLeft="5dp"
                                    android:paddingTop="5dp"
                                    android:textColor="@color/purple_500"
                                    android:textSize="18sp" />
                            </LinearLayout>


                            <TextView
                                android:id="@+id/tvPropertyDetailRatingNumber"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textAlignment="center"
                                android:text=""
                                android:textColor="@color/purple_500"
                                android:fontFamily="@font/futuramediumbt"
                                android:layout_below="@id/layoutRating"/>

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvHostelLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text=""
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_placeholder"
                        android:textSize="16sp"
                        android:fontFamily="@font/futuramediumbt"
                        android:textAlignment="textStart"
                        android:textColor="@color/purple_500"/>

                </LinearLayout>



                <TextView
                    android:id="@+id/tvDescriptionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/abouttitle"
                    android:fontFamily="@font/futuralightbt"
                    android:layout_marginTop="20dp"
                    android:textSize="22sp"
                    android:textAlignment="textStart"
                    android:textColor="@color/purple_500"/>

                <TextView
                    android:id="@+id/tvHostelOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/futuramediumbt"
                    android:textAlignment="textStart"
                    android:textColor="@color/purple_500"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#C7C7C9"
                    android:layout_marginTop="10dp"/>


                <TextView
                    android:id="@+id/tvFacilitiesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facilitiestitle"
                    android:fontFamily="@font/futuralightbt"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="22sp"
                    android:textAlignment="textStart"
                    android:textColor="@color/purple_500"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerFacilitiesView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#C7C7C9"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/tvHostelFreeCancellationTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Free Cancellation Policy"
                    android:layout_marginTop="10dp"
                    android:textSize="22sp"
                    android:fontFamily="@font/futuralightbt"
                    android:textAlignment="textStart"
                    android:textColor="@color/purple_500"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/tvHostelFreeCancellation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:maxLines="4"
                        android:ellipsize="end"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:fontFamily="@font/futuramediumbt"
                        android:textAlignment="textStart"
                        android:textColor="@color/purple_500"
                        android:layout_weight="0.1"/>
                    <ImageView
                        android:id="@+id/imgHostelFreeCancellation"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_weight="0.9"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/right_arrow_backup_2_svgrepo_com"
                        />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>